--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -55,6 +55,16 @@ header{
             background: #d0ab5c;
             padding:10px 20px;
             float:right;
+            text-decoration: none;
+            position:relative;
+             a{
+              position:absolute;
+              top:0;
+              left:0;
+              width:100%;
+              height:100%;
+              padding-top: 10px;
+            }
           }
         }
       &--middle{
@@ -92,6 +102,15 @@ header{
     text-align: center;
     margin:0 auto;
     border: 1px solid #fff;
+    position: relative;
+    a{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      padding-top: 10px;
+    }
   }
 }
 
@@ -111,4 +130,9 @@ header::before{
   content: "";
   display: block;
   clear: both;
+}
+
+.btn{
+  text-decoration: none;
+  color: white;
 }
