--- a/app/assets/stylesheets/_login-wrapper.scss
+++ b/app/assets/stylesheets/_login-wrapper.scss
@@ -42,6 +42,15 @@
             background: #d0ab5c;
             padding:10px 20px;
             float:right;
+            position:relative;
+            a{
+              position:absolute;
+              top:0;
+              left:0;
+              width:100%;
+              height:100%;
+              padding-top: 10px;
+            }
           }
         }
       &--middle{
@@ -79,6 +88,15 @@
     text-align: center;
     margin:0 auto;
     border: 1px solid #fff;
+    position: relative;
+    a{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      padding-top: 10px;
+    }
   }
 }
 
