Change profile image to current_user.image

--- a/app/views/projects/_afterSignIn.html.haml
+++ b/app/views/projects/_afterSignIn.html.haml
@@ -33,99 +33,99 @@
   .project-wrapper__projects
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_0741.jpg", size: "300x200"
+        =image_tag "IMG_2597.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          ポルトガルへ行こう
+          イタリアへ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_9557.jpg", size: "300x200"
+        =image_tag "IMG_9242.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          カンボジアへ行こう
+          中国へ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_0365.jpg", size: "300x200"
+        =image_tag "IMG_0546.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          チェコへ行こう
+          ハンガリーへ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_0625.jpg", size: "300x200"
+        =image_tag "IMG_7066.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          スペインへ行こう
+          フィリピンへ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_2240.jpg", size: "300x200"
+        =image_tag "IMG_2994.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          モロッコへ行こう
+          クロアチアへ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_9931.jpg", size: "300x200"
+        =image_tag "IMG_0329.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          シンガポールへ行こう
+          デンマークへ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_1692.jpg", size: "300x200"
+        =image_tag "IMG_0902.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          インドへ行こう
+          台湾へ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_3450.jpg", size: "300x200"
+        =image_tag "IMG_3341.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          ロシアへ行こう
+          ギリシャへ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
 
     .project-wrapper__projects--content
       .project-wrapper__projects--content--image
-        =image_tag "IMG_7500.jpg", size: "300x200"
+        =image_tag "IMG_3145.jpg", size: "300x200"
       .project-wrapper__projects--content--details
         .project-wrapper__projects--content--details--userImage
           =image_tag "IMG_0741.jpg", size: "30x30", style: "border-radius:50%;"
         .project-wrapper__projects--content--details--title
-          モンゴルへ行こう
+          モンテネグロへ行こう
         .project-wrapper__projects--content--details--date.clearfix
           2018年2月
