Fix some small changes

--- a/app/assets/stylesheets/_project-wrapper.scss
+++ b/app/assets/stylesheets/_project-wrapper.scss
@@ -48,6 +48,16 @@
       }
     }
   }
+  .moreProjects{
+    margin-top: 50px;
+    text-align: center;
+    width: 150px;
+    height: 30px;
+    line-height: 30px;
+    margin: 0 auto;
+    color: white;
+    background: orange;
+  }
 }
 
 .clearfix{
