--- a/app/assets/stylesheets/_signUp.scss
+++ b/app/assets/stylesheets/_signUp.scss
@@ -1,5 +1,5 @@
 .signUp{
-  background-image: url("world_map_02.jpg");
+  background-image: url("IMG_3468.jpg");
   background-size: cover;
   height:100%;
   width: 100%;
