--- a/app/assets/stylesheets/_userEdit.scss
+++ b/app/assets/stylesheets/_userEdit.scss
@@ -70,8 +70,9 @@
         height: 30px;
         background: orange;
         border: none;
-        margin-top: 100px;
+        margin-top: 50px;
         color: white;
+        margin-left: 100px;
       }
       }
     }
