--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -137,7 +137,8 @@
             モンゴルへ行こう
           .project-wrapper__projects--content--details--date.clearfix
             2018年2月
-
+    .moreProjects#more.clearfix
+      もっと見る
   .login-wrapper
     %h1
       さあ、みんなで旅に出よう！
