--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -42,5 +42,5 @@
           = f.label :selfintroduction, value: "自己紹介", class: "label"
           %br
           = f.text_field :selfintroduction, class:"text-form", value: "", class: "text-form", placeholder: "自己紹介を入力しよう"
-        .edit-wrapper__main--right--editBtn.clearfix
+        .edit-wrapper__main--right--editBtn
           = f.submit "保存する", class: 'editBtn'
