--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -54,5 +54,5 @@
       .main-wrapper--profile--bottom--title
         自己紹介
       .main-wrapper--profile--bottom--text
-        自己紹介はまだありません。
+        = current_user.selfintroduction
   .main-wrapper--projects
