--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -1,5 +1,5 @@
 .login{
-  background-image: url("world_map_02.jpg");
+  background-image: url("IMG_3468.jpg");
   background-size: cover;
   height:100%;
   width: 100%;
@@ -10,6 +10,7 @@
     font-size: 50px;
     font-weight: bold;
     margin-bottom: 50px;
+    color: white;
     }
 
   .login__forms{
