--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -17,7 +17,7 @@
         %li
           = link_to "設定", edit_user_path(current_user.id), class: "link"
         %li
-          企画を作成
+          = link_to "企画を作成", new_project_path, class: "link"
 
 .main-wrapper
   .main-wrapper--profile
